Pierwsza wersja ikon pracochlonnosci i czasu trwania

--- a/src/main/webapp/assets/styles/main.css
+++ b/src/main/webapp/assets/styles/main.css
@@ -28,6 +28,24 @@ Developement Ribbon
     background-repeat: no-repeat;
 }
 
+.image-duration {
+    display: inline-block;
+    width: 15px;
+    height: 18px;
+    content: "";
+    background: url("../images/time_new.png") no-repeat 0 0;
+    background-size: 100%;
+}
+
+.image-pracochlonnosc-easy {
+    display: inline-block;
+    width: 19px;
+    height: 21px;
+    content: "";
+    background: url("../images/easy_new.png") no-repeat 0 0;
+    background-size: 100%;
+}
+
 /* ==========================================================================
 Version number in navbar
 ========================================================================== */
