--- a/src/main/webapp/assets/styles/main.css
+++ b/src/main/webapp/assets/styles/main.css
@@ -315,11 +315,6 @@ ul#strengthBar {
     text-shadow: 1px 1px 2px rgba(0, 0, 0, .75)
 }
 
-.entry {
-    padding-left: 2%;
-    margin: 0px;
-}
-
 .add-new-div {
     position: relative;
     width: 300px;
@@ -372,20 +367,22 @@ ul#strengthBar {
     transition-delay: 50ms;
 }
 
-.image-duration {
-    display: inline-block;
-    width: 15px;
-    height: 18px;
-    content: "";
-    background: url("../images/time_new.png") no-repeat 0 0;
-    background-size: 100%;
+.przepiss-entry {
+    margin-bottom: 10px;
 }
 
-.image-pracochlonnosc-easy {
+.przepiss-entry-img-container {
+    height: 24px;
     display: inline-block;
-    width: 17px;
-    height: 17px;
-    content: "";
-    background: url("../images/cook.png") no-repeat 0 0;
-    background-size: 100%;
+}
+
+.przepiss-entry-img {
+    margin-top: -5px;
+    width: 24px;
+    height: 24px;
+}
+
+.przepiss-entry-description {
+    padding-left: 2%;
+    margin: 0px;
 }
