Zmiana architektury: dodadnie PrzepisPart. W przepis part produkty i opis przygotowania

--- a/src/main/webapp/scripts/components/navbar/navbar.html
+++ b/src/main/webapp/scripts/components/navbar/navbar.html
@@ -52,10 +52,11 @@
                                                        data-target=".navbar-collapse.in"><span
                             class="glyphicon glyphicon-asterisk"></span>
                             &#xA0;<span translate="global.menu.entities.rodzajProduktu">rodzajProduktu</span></a></li>
-                        <li ui-sref-active="active"><a ui-sref="przepisProdukt" data-toggle="collapse"
+                        <li ui-sref-active="active"><a ui-sref="przepisPartProdukt" data-toggle="collapse"
                                                        data-target=".navbar-collapse.in"><span
                             class="glyphicon glyphicon-asterisk"></span>
-                            &#xA0;<span translate="global.menu.entities.przepisProdukt">przepisProdukt</span></a></li>
+                            &#xA0;<span
+                                translate="global.menu.entities.przepisPartProdukt">przepisPartProdukt</span></a></li>
                         <li ui-sref-active="active"><a ui-sref="produkt" data-toggle="collapse"
                                                        data-target=".navbar-collapse.in"><span
                             class="glyphicon glyphicon-asterisk"></span>
