--- a/src/main/webapp/assets/styles/main.css
+++ b/src/main/webapp/assets/styles/main.css
@@ -5,13 +5,17 @@ body {
     color: #333;
 }
 
-/* ==========================================================================
+/*.ng-hide:not(.ng-hide-animate) {
+    display: none;
+}
+
+!* ==========================================================================
 Hide ng-cloak on page load, https://docs.angularjs.org/api/ng/directive/ngCloak
-========================================================================== */
+========================================================================== *!
 [ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak,
 .x-ng-cloak {
     display: none !important;
-}
+}*/
 
 /* ==========================================================================
 Developement Ribbon
@@ -412,7 +416,7 @@ ul#strengthBar {
 }
 
 .entry_title {
-    padding: 40px 14px 15px;
+    padding: 0px 14px 15px;
     position: absolute;
     background: linear-gradient(to bottom, transparent 0, rgba(0, 0, 0, .3) 35%, rgba(0, 0, 0, .3) 100%);
     bottom: 0;
@@ -451,19 +455,22 @@ ul#strengthBar {
 }
 
 .przepiss-entry-img-container {
-    height: 24px;
-    display: inline-block;
+    width: 100%;
+    display: block !important;
 }
 
 .przepiss-entry-img {
-    margin-top: -5px;
-    width: 24px;
-    height: 24px;
+    width: 30%;
+    display: inline !important;
 }
 
 .przepiss-entry-description {
     padding-left: 2%;
     margin: 0px;
+    text-transform: uppercase;
+    font-size: 22px;
+    font-weight: 500;
+    color: #FFF;
 }
 
 .przepiss-entry-description-title {
